--- a/app/views/layouts/includes/_footer.html.haml
+++ b/app/views/layouts/includes/_footer.html.haml
@@ -2,8 +2,7 @@
   %footer 
     .row
       %div
-        / = link_to(image_tag("logo-footer.svg", :alt => "Bruce McElroy Logo", :rel => "logo"), root_path)
-        = image_tag("logo-footer.svg", :alt => "Bruce McElroy Logo", :rel => "logo")
+        = link-to "index": img src="../assets/logo-footer.svg" alt="Logo"
         %p My goal is to provide you with a service as a front end web developer that exceeds your expectations in a timely fashion. 
         %a{:href => "https://www.facebook.com/bruce.a.mcelroy", :target => "_blank", :title => "Facebook-social"}
           %i.fa.fa-facebook-square
